--- a/jenkinsDemo2/Views/Shared/_Layout.cshtml
+++ b/jenkinsDemo2/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - jenkinsDemo2</p>
+            <p>&copy; 2019 - jenkinsDemo-iiss</p>
         </footer>
     </div>
 
